@@ -1,4 +1,4 @@
-#ident "$Id: mount_ext2.c,v 1.7 2004/01/01 11:49:09 raven Exp $"
+#ident "$Id: mount_ext2.c,v 1.8 2004/01/18 11:49:35 raven Exp $"
 /* ----------------------------------------------------------------------- *
  *   
  *  mount_ext2.c - module for Linux automountd to mount ext2 filesystems
@@ -54,6 +54,7 @@ int mount_mount(const char *root, const char *name, int name_len,
 	const char *p, *p1;
 	int err, ro = 0;
 	const char *fsck_prog;
+	int status;
 
 	fullpath = alloca(strlen(root) + name_len + 2);
 	if (!fullpath) {
@@ -63,7 +64,7 @@ int mount_mount(const char *root, const char *name, int name_len,
 	sprintf(fullpath, "%s/%s", root, name);
 
 	DB(syslog(LOG_DEBUG, MODPREFIX "calling mkdir_path %s", fullpath));
-	if (mkdir_path(fullpath, 0555) && errno != EEXIST) {
+	if ((status = mkdir_path(fullpath, 0555)) && errno != EEXIST) {
 		syslog(LOG_ERR, MODPREFIX "mkdir_path %s failed: %m", name);
 		return 1;
 	}
@@ -102,8 +103,8 @@ int mount_mount(const char *root, const char *name, int name_len,
 		       what);
 		return 1;
 	}
-	wait_for_lock();
 
+	wait_for_lock();
 	if (options) {
 		DB(syslog
 		   (LOG_DEBUG, MODPREFIX "calling mount -t %s " SLOPPY "-o %s %s %s",
@@ -120,7 +121,7 @@ int mount_mount(const char *root, const char *name, int name_len,
 	}
 	unlink(AUTOFS_LOCK);
 	if (err) {
-		if (!ap.ghost)
+		if (!ap.ghost || (ap.ghost && !status))
 			rmdir_path(fullpath);
 		syslog(LOG_ERR, MODPREFIX "failed to mount %s (type %s) on %s",
 		       what, fstype, fullpath);
