@@ -1,5 +1,4 @@
 
-- fixed lookup problem with wildcard order in map.
 - added CHANGELOG.
 - fixed error in some ident tags.
 - merge debian patch 032 document nonstrict special option.
@@ -16,6 +15,8 @@
 - change fsck return code check.
    - still try to mount if fsck fails to run.
    - error only if fsck finds uncorrectable errors.
+- fixed lookup problem with wildcard order in map.
+- fixed lookup problem relating to directory tidyup.
 
 
 4/12/2003 autofs-4.1.0
